fix max z-index

--- a/scripts/magnify_image.css
+++ b/scripts/magnify_image.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 99998;
+  z-index: 16777271;
 }
 
 /* --------------------- Choose image ------------------------- */
@@ -15,7 +15,7 @@
   opacity: 0;
   border-radius: 50%;
   background-color: #000b;
-  z-index: 99999;
+  z-index: 16777271;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -89,7 +89,7 @@
   width: 100%;
   height: 100%;
   background-color: #000b;
-  z-index: 99999;
+  z-index: 16777271;
   overflow: hidden;
 }
 
